syntax = "proto3";

service Lab6Service {
  rpc Add (AddRequest) returns (AddReply);
  rpc RawImage (ImageRequest) returns (ImageReply);
  rpc DotProduct (DotRequest) returns (DotReply);
  rpc JsonImage (JsonImageRequest) returns (ImageReply);
}

message AddRequest { int32 a = 1; int32 b = 2; }
message AddReply { int32 result = 1; }

message ImageRequest { bytes image = 1; }
message ImageReply { int32 width = 1; int32 height = 2; }

message DotRequest { repeated float a = 1; repeated float b = 2; }
message DotReply { float result = 1; }

message JsonImageRequest { string image=1; }